# gcp-pipeline-reference

./: .dockerignore  .gitignore  .output.txt  .test_output_full.txt  ANALYSIS_AND_PROMPT.md  COMPLETE_TESTING_GUIDE.md  DELIVERABLES_CHECKLIST.md  DEPLOYMENT_PACKAGE_COMPLETE.md  DOCUMENTATION_INDEX.md  FILE_INDEX.md  FILE_MANAGEMENT_IMPLEMENTATION_REVIEW.md  FILE_MANAGEMENT_REVIEW_SUMMARY.md  FILE_MANAGEMENT_REVIEW_VISUAL.md  FINAL_DEPLOYMENT_VALIDATION.md  GCP_DEPLOYMENT_TESTING_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_GUIDE_FILE_MANAGEMENT.md  IMPLEMENTATION_PROMPT.md  MANUAL_TESTING_GUIDE.md  Makefile  NEXT_PROMPT.md  PLATFORM_TEAM_INFO.md  PROJECT_CONTEXT.md  PROJECT_INDEX.md  QUICK_START_TESTING.md  README.md  README_REVIEW_DOCUMENTS.md  STARTER_CODE_TEMPLATES.md  TESTING_IMPLEMENTATION_CHECKLIST.md  TESTING_IMPLEMENTATION_SUMMARY.md  TEST_COMPLETION_REPORT.md  VALIDATION_FINAL_SUMMARY.md  archive_config.yaml  auditing_ticket.md  blueprint_integration_test_results.txt  blueprint_test_results.txt  blueprint_unit_test_results.txt  build.sh  deploy.sh  gdw_data_core_unit_test_results.txt  (+10 more)
deployments/: .env.staging  GCP_DEPLOYMENT_TESTING_GUIDE.py  MANIFEST.in  README.md  conftest.py  pyproject.toml  run_tests.sh
deployments/_to_delete/em-migration/: README.md
deployments/_to_delete/loa-migration/: README.md
deployments/application1-ingestion/: Dockerfile  README.md  pyproject.toml
deployments/application1-ingestion/tests/: conftest.py
deployments/application1-orchestration/: README.md  pyproject.toml
deployments/application1-orchestration/dags/: application1_error_handling_dag.py  application1_fdp_transform_dag.py  application1_odp_application2d_dag.py  application1_pubsub_trigger_dag.py
deployments/application1-transformation/: README.md  pyproject.toml
deployments/application1-transformation/dbt/: dbt_project.yml
deployments/application2-ingestion/: Dockerfile  README.md  pyproject.toml
deployments/application2-ingestion/tests/: conftest.py
deployments/application2-orchestration/: README.md  pyproject.toml
deployments/application2-orchestration/dags/: __init__.py  application2_error_handling_dag.py  application2_fdp_transform_dag.py  application2_odp_application2d_dag.py  application2_pubsub_trigger_dag.py
deployments/application2-transformation/: README.md  pyproject.toml
deployments/application2-transformation/dbt/: dbt_project.yml
deployments/bigquery-to-mapped-product/: Dockerfile  README.md  cloudbuild.yaml  generate_dbt_models.py  pyproject.toml
deployments/bigquery-to-mapped-product/config/: system.yaml
deployments/bigquery-to-mapped-product/dbt/: cloudbuild.yaml  dbt_project.yml  profiles.yml
deployments/cdp-segmentation-example/: DEPLOYMENT_GUIDE.md  README.md  pyproject.toml  requirements.txt
deployments/cicd/: README.md
deployments/data-pipeline-orchestrator/: Dockerfile  README.md  cloudbuild.yaml  generate_dags.py  pyproject.toml
deployments/data-pipeline-orchestrator/config/: config_loader.py  system.yaml
deployments/data-pipeline-orchestrator/dags/: dag_factory.py  data_ingestion_dag.py  error_handling_dag.py  generic_accounts_ingestion_dag.py  generic_applications_ingestion_dag.py  generic_customers_ingestion_dag.py  generic_decision_ingestion_dag.py  generic_error_handling_dag.py  generic_event_transaction_excess_transformation_dag.py  generic_ingestion_dag.py  generic_pipeline.py  generic_pipeline_status_dag.py  generic_portfolio_account_excess_transformation_dag.py  generic_portfolio_account_facility_transformation_dag.py  (+4 more)
deployments/docs/: DOCUMENTATION_CLEANUP_ANALYSIS.md
deployments/em/: README.md  pyproject.toml  pytest.ini
deployments/em-ingestion/: Dockerfile  README.md  harness-ci.yaml  pyproject.toml
deployments/em-migration/: pyproject.toml  run_tests.sh
deployments/em-orchestration/: README.md  harness-ci.yaml  pyproject.toml
deployments/em-transformation/: README.md  harness-ci.yaml  pyproject.toml
deployments/fdp-to-consumable-product/: Dockerfile  README.md  generate_dbt_models.py  pyproject.toml
deployments/guides/: AUDIT_INTEGRATION_GUIDE.md  BDD_TESTING_GUIDE.md  COMPLETE_TESTING_GUIDE.md  DATA_QUALITY_GUIDE.md  ERROR_HANDLING_GUIDE.md  GCP_DEPLOYMENT_TESTING_GUIDE.md  GITHUB_FLOW.md  PUBSUB_KMS_GUIDE.md
deployments/loa/: README.md  pyproject.toml
deployments/loa-ingestion/: Dockerfile  README.md  harness-ci.yaml  pyproject.toml
deployments/loa-migration/: pyproject.toml  run_tests.sh
deployments/loa-orchestration/: README.md  harness-ci.yaml  pyproject.toml
deployments/loa-transformation/: README.md  harness-ci.yaml  pyproject.toml
deployments/mainframe-segment-transform/: README.md  pyproject.toml  requirapplication1ents.txt  requirements.txt
deployments/original-data-to-bigqueryload/: Dockerfile  README.md  cloudbuild.yaml  metadata.json  pyproject.toml
deployments/postgres-cdc-streaming/: Dockerfile  README.md  pyproject.toml
deployments/setup/: Dockerfile  Dockerfile.test  docker-compose.yml  requirements-ci.txt  requirements-test.txt  requirements.txt
deployments/spanner-to-bigquery-load/: README.md
gcp-pipeline-libraries/gcp-pipeline-beam/: README.md  SPEC.md  harness-ci.yaml  pyproject.toml
gcp-pipeline-libraries/gcp-pipeline-core/: README.md  SPEC.md  harness-ci.yaml  pyproject.toml
gcp-pipeline-libraries/gcp-pipeline-framework/: README.md  pyproject.toml
gcp-pipeline-libraries/gcp-pipeline-orchestration/: README.md  SPEC.md  harness-ci.yaml  pyproject.toml
gcp-pipeline-libraries/gcp-pipeline-tester/: README.md  SPEC.md  harness-ci.yaml  pyproject.toml  pytest.ini
gcp-pipeline-libraries/gcp-pipeline-transform/: README.md  SPEC.md  harness-ci.yaml  pyproject.toml
gdw_data_core/: README.md  README.md.backup  conftest.py  pyproject.toml  setup.py
gdw_data_core/core/: __init__.py
gdw_data_core/orchestration/: __init__.py  dependency.py
gdw_data_core/pipelines/: __init__.py
gdw_data_core/testing/: __init__.py
gdw_data_core/tests/: README.md  __init__.py  conftest.py
libraries/gcp-pipeline-builder/: README.md  pyproject.toml
(+1589 files in other folders)
