[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "application1-orchestration"
version = "1.0.1"
description = "Application1 Orchestration - Airflow DAGs for pipeline coordination (JOIN pattern)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "gcp-pipeline-framework[core,orchestration]>=1.0.0",
]
# CRITICAL: NO apache-beam or gcp-pipeline-beam dependency!

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "gcp-pipeline-tester>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dags*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

