[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "application2-transformation"
version = "1.0.1"
description = "Application2 FDP Transformation - dbt models for ODP to FDP (MAP: 1 source → 1 target)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "dbt-bigquery>=1.5.0",
    "gcp-pipeline-transform",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

