[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigquery-to-mapped-product"
version = "1.0.1"
description = "Generic FDP Transformation - dbt models for ODP to FDP (JOIN: 3 sources → 1 target)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "dbt-bigquery>=1.5.0",
    "gcp-pipeline-transform>=1.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

