[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdp-segmentation-example"
version = "1.0.0"
description = "CDP Segmentation Example - GCS to BigQuery and GCS exports"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apache-beam[gcp]>=2.52.0",
    "gcp-pipeline-core",
    "gcp-pipeline-beam",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
