[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "em-orchestration"
version = "1.0.0"
description = "EM Orchestration - Airflow DAGs for pipeline coordination (JOIN pattern)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "gcp-pipeline-core>=1.0.0",
    "gcp-pipeline-orchestration>=1.0.0",
]
# CRITICAL: NO apache-beam or gcp-pipeline-beam dependency!

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dags*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

