[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "em-transformation"
version = "1.0.0"
description = "EM FDP Transformation - dbt models for ODP to FDP (JOIN: 3 sources → 1 target)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "dbt-bigquery>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

