[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loa-transformation"
version = "1.0.0"
description = "LOA FDP Transformation - dbt models for ODP to FDP (SPLIT: 1 source → 2 targets)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "dbt-bigquery>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

