[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-pipeline-ref-ingestion"
version = "1.0.13"
description = "Reference Implementation: GCS-to-BigQuery Ingestion Pipeline using gcp-pipeline-framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["gcp", "bigquery", "dataflow", "beam", "reference", "example"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-storage>=2.0.0",
    "pydantic>=2.0.0",
    "gcp-pipeline-core>=1.0.13",
    "gcp-pipeline-beam>=1.0.13",
]
# NOTE: NO apache-airflow dependency!

[project.urls]
Homepage = "https://github.com/enrichmeai/gcp-pipeline-reference"
Documentation = "https://github.com/enrichmeai/gcp-pipeline-reference/tree/main/deployments/original-data-to-bigqueryload"
Repository = "https://github.com/enrichmeai/gcp-pipeline-reference"
Framework = "https://pypi.org/project/gcp-pipeline-framework/"

[project.scripts]
gcp-ref-ingestion = "data_ingestion.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "pytest-cov>=4.0.0",
    "gcp-pipeline-tester>=1.0.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

