[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postgres-cdc-streaming"
version = "1.0.0"
description = "Real-time CDC streaming pipeline: PostgreSQL → Kafka → Beam → BigQuery"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "apache-beam[gcp]==2.56.0",
    "confluent-kafka>=2.3.0",
    "google-cloud-bigquery>=3.14.0",
    "google-cloud-storage>=2.14.0",
    "gcp-pipeline-core",
    "gcp-pipeline-beam",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

