[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-pipeline-beam"
version = "1.0.5"
description = "Beam ingestion library for GCP data pipelines"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apache-beam[gcp]==2.56.0",
    "gcp-pipeline-core",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../gcp-pipeline-core/src"]
testpaths = ["tests"]
