[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-pipeline-beam"
version = "1.0.15"
description = "Beam ingestion library for GCP data pipelines"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apache-beam[gcp]==2.56.0",
    "gcp-pipeline-core",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../gcp-pipeline-core/src"]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
