[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-pipeline-core"
version = "1.0.14"
description = "Core library for GCP data pipelines"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-cloud-storage",
    "google-cloud-bigquery",
    "google-cloud-pubsub",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "pydantic>=2.0.0",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
