[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-pipeline-framework"
version = "1.0.29"
description = "Umbrella package for GCP Data Migration Pipeline Libraries"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gcp-pipeline-core==1.0.29",
    "gcp-pipeline-beam==1.0.29",
    "gcp-pipeline-orchestration==1.0.29",
    "gcp-pipeline-transform==1.0.29",
    "gcp-pipeline-tester==1.0.29",
]

[project.optional-dependencies]
core = ["gcp-pipeline-core==1.0.29"]
beam = ["gcp-pipeline-beam==1.0.29"]
orchestration = ["gcp-pipeline-orchestration==1.0.29"]
transform = ["gcp-pipeline-transform==1.0.29"]
tester = ["gcp-pipeline-tester==1.0.29"]

[project.scripts]
gcp-pipeline-docs = "gcp_pipeline_framework.cli:main"

[project.urls]
Homepage = "https://github.com/enrichmeai/gcp-pipeline-reference"
Repository = "https://github.com/enrichmeai/gcp-pipeline-reference"
Documentation = "https://github.com/enrichmeai/gcp-pipeline-reference/tree/main/gcp-pipeline-libraries"
"Reference Implementations" = "https://github.com/enrichmeai/gcp-pipeline-reference/tree/main/deployments"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gcp_pipeline_framework" = [
    "docs/*.md",
    "infrastructure/**/*.tf",
    "infrastructure/**/*.tfvars",
    "infrastructure/**/*.hcl",
    "infrastructure/**/*.yaml",
    "infrastructure/**/Dockerfile",
    "infrastructure/**/*.md",
    "workflows/*.yml",
    "config/*",
    "deployments/*/Dockerfile",
    "deployments/*/cloudbuild.yaml",
    "deployments/*/README.md",
    "deployments/*/pyproject.toml",
]
