[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-pipeline-orchestration"
version = "1.0.1"
description = "Orchestration library for GCP data pipelines"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apache-airflow>=2.5.0",
    "apache-airflow-providers-google>=10.1.0",
    "google-cloud-storage",
    "google-cloud-pubsub",
    "gcp-pipeline-core",
]

[tool.setuptools.packages.find]
where = ["src"]
