[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-pipeline-orchestration"
version = "1.0.28"
description = "Orchestration library for GCP data pipelines"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-cloud-storage",
    "google-cloud-pubsub",
    "PyYAML>=6.0",
    "gcp-pipeline-core",
    "apache-airflow-providers-google>=10.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../gcp-pipeline-core/src"]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
